@@ -1,4 +1,8 @@
-2012-04-07 Philipp Klaus Krause <pkk AT spth.de>
+2012-04-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCcse.c (ifOperandsHave): fixed bug #3516746
+
+2012-04-11 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/string.c:
 	  Added test for strrchr().
